# cokit

./: .editorconfig  .gitignore  .gitlab-ci.yml  AI-TRAINING-POLICY.md  CCLA.md  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  HEADER.md  LICENSE.md  NOTICE.md  README.md  RELEASING.md  REUSE.toml  SECURITY.md  ai.txt  cliff.toml  clippy.toml  codebook.toml  deny.toml  release.toml  rust-toolchain.toml  rustfmt.toml  typeshare.toml
co-actor/: Cargo.toml  README.md
co-actor/src/: actor.rs  actor_local.rs  epic.rs  js_local_task_spawner.rs  js_task_spawner.rs  lib.rs  lib.rs.orig  response.rs  state.rs  task_handle.rs  task_options.rs  task_spawner.rs  task_spawner_local.rs  time.rs  tokio_task_spawner.rs
co-actor/src/epic/: action_dispatch.rs  actions.rs
co-api/: Cargo.toml  README.md
co-api/src/: co_v1.rs  lib.rs
co-api/src/types/: dag_link.rs  guard.rs  mod.rs  reducer.rs  storage.rs
co-bindings/: Cargo.toml  README.md
co-bindings/flutter/: build.sh  flutter_rust_bridge.yaml
co-bindings/flutter/.dart_tool/: package_graph.json
co-bindings/flutter/lib/: co_flutter.dart
co-bindings/flutter/macos/: co_flutter.podspec
co-bindings/src/: frb_generated.rs  lib.rs
co-bindings/src/types/: cid.rs  co_map.rs  co_set.rs  identity.rs  level.rs  mod.rs  network_settings.rs  storage.rs  unixfs.rs
co-cli/: Cargo.toml  README.md
co-cli/src/: cli.rs  main.rs
co-cli/src/commands/: cbor.rs  co.rs  core_build_builtin.rs  cores_build.rs  ipld.rs  mod.rs  network.rs  pin.rs  storage.rs
co-dioxus/: Cargo.toml  README.md
co-dioxus/src/: lib.rs
co-dioxus/src/hooks/: mod.rs  use_co.rs  use_co_actions.rs  use_co_api.rs  use_co_block.rs  use_co_context.rs  use_co_context_provider.rs  use_co_error.rs  use_co_error_provider.rs  use_co_error_signal.rs  use_co_id.rs  use_co_reducer_state.rs  use_co_selector.rs  use_co_state.rs  use_co_storage.rs  use_cos.rs  use_did_key_identity.rs  use_dispatch.rs  use_selector.rs  use_selectors.rs
co-dioxus/src/types/: co_settings.rs  co_state_result.rs  error.rs  mod.rs
co-guard/: Cargo.toml
co-guard/src/: guards.rs  lib.rs  resolver.rs
co-guard/src/guards/: access.rs  core.rs  mod.rs
co-guard/src/types/: definition.rs  error.rs  mod.rs  mode.rs
co-identity/: Cargo.toml
co-identity/src/: lib.rs
co-identity/src/resolvers/: did_key.rs  join.rs  local.rs  memory.rs  mod.rs
co-identity/src/types/: did_core.rs  identity.rs  mod.rs  private_identity.rs  private_resolver.rs  receive_error.rs  resolver.rs
co-js/: Cargo.toml  README.md  index.html  index.js  package-lock.json  package.json  webpack.config.js
co-js/src/: actor.rs  block_storage.rs  dynamic_value.rs  js.rs  lib.rs  list.rs  map.rs  set.rs  unixfs.rs
co-js/tests/: test_unixfs.rs
co-log/: Cargo.toml  README.md  THIRD-PARTY.md
co-log/src/: lib.rs
co-log/src/identity/: did_key.rs  join.rs  local.rs
co-log/src/types/: error.rs  identity.rs  mod.rs
co-log/tests/: integration_test.rs  previous_heads.rs
co-macros/: Cargo.toml
co-macros/src/: co.rs  lib.rs  tagged_fields.rs
co-messaging/: Cargo.toml  README.md
co-messaging/src/: lib.rs
co-messaging/src/matrix_event/: call_event.rs  ephemeral_event.rs  message_event.rs  mod.rs  multimedia.rs  poll_event.rs  receipts.rs  relation.rs  state_event.rs  user_events.rs
co-messaging/test-output/: package.json  schema.json  types.d.ts
co-messaging/tests/: call.rs  ephemeral.rs  message.rs  replacement.rs  schemars.rs  state.rs  user.rs
co-network/: Cargo.toml  README.md
co-network/src/: compat.rs  lib.rs  network.rs
co-network/src/bitswap/: bitswap.rs  client.rs  mod.rs  provider.rs  request.rs  storage.rs
co-network/src/didcomm/: behaviour.rs  codec.rs  handler.rs  inbound.rs  message.rs  mod.rs  protocol.rs
co-network/src/didcontact/: did.rs  mod.rs  rendezvouz_point.rs
co-network/src/discovery/: behaviour.rs  did_discovery.rs  discovery.rs  mod.rs  peer.rs
co-network/src/heads/: behaviour.rs  heads.rs  heads_message.rs  message.rs  mod.rs
co-network/src/services/: mod.rs
co-network/src/types/: didcomm.rs  error.rs  heads.rs  layer_behaviour.rs  layer_provider.rs  mod.rs  network_task.rs  peer_provider.rs  provider.rs
co-primitives/: Cargo.toml  README.md  build.rs
co-primitives/benches/: lsm_tree_map.rs
co-primitives/src/: lib.rs
co-primitives/src/macros/: mod.rs  serde_string_enum.rs
co-primitives/src/types/: action.rs  any_block_storage.rs  block.rs  cid.rs  (+37 more)
co-runtime/: CHANGELOG.md  Cargo.toml  README.md  build.rs
co-runtime/src/: lib.rs  macros.rs
co-sdk/: Cargo.toml  Cores.toml
co-sdk/benches/: local_push.rs  shared_push.rs
co-sdk/src/: lib.rs
co-sdk/tests/: access_policy.rs  co_shared_create.rs  co_shared_join.rs  conflicting_membership_update.rs  contact.rs  core_upgrade.rs  create_shared_co_test.rs  guard.rs  invite.rs  invite_multiple.rs  local_join.rs  local_multi_instance.rs  local_smoke.rs  push.rs  push_error.rs
co-storage/: Cargo.toml  README.md
co-storage/src/: lib.rs
co-tauri/: Cargo.toml
co-tauri/src/: lib.rs
co-test/: Cargo.toml
co-test/src/: api.rs  lib.rs
co-uniffi/: Cargo.toml
co-uniffi/flutter/: build.sh  pubspec.yaml
co-uniffi/src/: frb_generated.rs  lib.rs
co-wasm-api/: Cargo.toml  README.md
co-wasm-api/src/: co_v1.rs  lib.rs
co-wasm-runtime/: Cargo.toml
co-wasm-runtime/src/: lib.rs
cores/board/: Cargo.toml
daemon/: Cargo.toml  README.md
daemon/src/: main.rs
did-co/: Cargo.toml
did-co/src/: lib.rs  parse.rs  resolve.rs
network-co/: Cargo.toml
network-co/src/: didcomm.rs  didcontact.rs  lib.rs
pallet-co/: Cargo.toml
pallet-co/src/: lib.rs  mock.rs  std.rs  tests.rs
sdk/: Cargo.toml
sdk/src/: lib.rs
state/: Cargo.toml
state/src/: lib.rs
tauri-plugin-co-sdk/: .gitignore  Cargo.toml  README.md  build.rs  package-lock.json  package.json  tsconfig.json
tauri-plugin-co-sdk/guest-js/: index.ts  invoke-get-utils.ts  invoke-utils.ts
tauri-plugin-co-sdk/permissions/: default.toml
tauri-plugin-co-sdk/src/: lib.rs
tauri-plugin-co-sdk/webview-src/: index.ts
(+811 files in other folders)
