[workspace]
members = [
    "co-actor",
    "co-api",
    "co-cli",
    "co-dioxus",
    "co-identity",
    "co-log",
    "co-macros",
    "co-messaging",
    "co-network",
    "co-primitives",
    "co-runtime",
    "co-sdk",
    "co-storage",
    "co-tauri",
    "cores/co",
    "cores/data-series",
    "cores/file",
    "cores/keystore",
    "cores/membership",
    "cores/pin",
    "cores/role",
    "cores/room",
    "daemon",
    "did-co",
    "examples/counter",
    "examples/message",
    "examples/tauri-app/src-tauri",
]
resolver = "2"

[profile.release]
panic = "unwind"

[workspace.dependencies]
anyhow = { version = "1", features = ["backtrace"] }
async-stream = "0.3.3"
async-trait = "0.1.57"
derive_more = "0.99.17"
either = { version = "1" }
futures = "0.3.30"
futures-util = "0.3.26"
hyper = { version = "0.14.23" }
libipld = "0.16"
libp2p = { version = "0.53", features = ["full"] }
pin-project = "1.1.4"
rust-unixfs = "0.4.0"
serde = "1"
serde_bytes = "0.11.12"
serde_ipld_dagcbor = "0.6.1"
serde_ipld_dagjson = "0.2.0"
serde_json = "1"
serde_repr = "0.1"
smallvec = "^1.6.1"
thiserror = "1"
tokio = "1"
tokio-context = "0.1.3"
tokio-stream = "0.1.15"
tokio-test = "0.4.2"
tokio-util = "0.7"
toml = "0.8.9"
tracing = "0.1.34"
tracing-log = "0.1.3"
tracing-opentelemetry = "0.18"
tracing-subscriber = "0.3.14"
uuid = { version = "1.2.2", features = ["default", "v4"] }
zeroize = "1.7.0"
