[workspace]
members = [
    "co-actor",
    "co-api",
    "co-cli",
    "co-dioxus",
    "co-identity",
    "co-log",
    "co-macros",
    "co-messaging",
    "co-network",
    "co-primitives",
    "co-runtime",
    "co-sdk",
    "co-storage",
    "cores/board",
    "cores/co",
    "cores/data-series",
    "cores/file",
    "cores/keystore",
    "cores/membership",
    "cores/pin",
    "cores/poa",
    "cores/rich-text",
    "cores/role",
    "cores/room",
    "cores/storage",
    "daemon",
    "did-co",
    "examples/counter",
    "examples/counter-upgraded",
    "examples/message",
    "tauri-plugin-co-sdk",
    "tauri-plugin-co-sdk/examples/messenger/src-tauri",
]
resolver = "2"

[profile.release]
panic = "unwind"

[workspace.dependencies]
anyhow = { version = "1", features = ["backtrace"] }
async-stream = "0.3.3"
async-trait = "0.1.57"
cid = "0.11.1"
derive_more = "0.99.17"
either = { version = "1" }
futures = "0.3.30"
futures-util = "0.3.26"
hyper = { version = "0.14.23" }
ipld-core = { version = "0.4.1", features = ["serde"] }
ipld-dagpb = "0.2.1"
libp2p = { version = "0.53", features = ["full"] }
multiaddr = "0.18.2"
multihash = "0.19.3"
multihash-codetable = { version = "0.1.4", features = ["blake3"] }
num-rational = "0.4"
pin-project = "1.1.4"
rand = "0.8.5"
rust-unixfs = "0.5.0"
schemars = "0.8.21"
scopeguard = "1.2.0"
serde = "1"
serde_bytes = "0.11.12"
serde_ipld_dagcbor = "0.6.1"
serde_ipld_dagjson = "0.2.0"
serde_json = "1"
serde_repr = "0.1"
smallvec = "^1.6.1"
thiserror = "1"
tokio = "1"
tokio-context = "0.1.3"
tokio-stream = "0.1.15"
tokio-test = "0.4.2"
tokio-util = "0.7"
toml = "0.8.9"
tracing = "0.1.34"
tracing-bunyan-formatter = { version = "0.3.10", git = "https://github.com/dkuhnert/tracing-bunyan-formatter.git" }
tracing-log = "0.1.3"
tracing-opentelemetry = "0.18"
tracing-subscriber = "0.3.14"
uuid = { version = "1.2.2", features = ["default", "v4"] }
zeroize = "1.7.0"

# local workspace crates
co-actor = { path = "co-actor" }
co-api = { path = "co-api" }
co-cli = { path = "co-cli" }
co-core-board = { path = "cores/board" }
co-core-co = { path = "cores/co" }
co-core-data-series = { path = "cores/data-series" }
co-core-file = { path = "cores/file" }
co-core-keystore = { path = "cores/keystore" }
co-core-membership = { path = "cores/membership" }
co-core-pin = { path = "cores/pin" }
co-core-poa = { path = "cores/poa" }
co-core-rich-text = { path = "cores/rich-text" }
co-core-role = { path = "cores/role" }
co-core-room = { path = "cores/room" }
co-core-storage = { path = "cores/storage" }
co-dioxus = { path = "co-dioxus" }
co-identity = { path = "co-identity" }
co-log = { path = "co-log" }
co-macros = { path = "co-macros" }
co-messaging = { path = "co-messaging" }
co-network = { path = "co-network" }
co-primitives = { path = "co-primitives" }
co-runtime = { path = "co-runtime" }
co-sdk = { path = "co-sdk", default-features = false }
co-storage = { path = "co-storage" }
tauri-plugin-co-sdk = { path = "tauri-plugin-co-sdk" }
