[workspace]
members = [
    "co-actor",
    "co-api",
    "co-bindings",
    "co-cli",
    "co-dioxus",
    "co-identity",
    "co-js",
    "co-log",
    "co-macros",
    "co-messaging",
    "co-network",
    "co-primitives",
    "co-runtime",
    "co-sdk",
    "co-storage",
    "co-test",
    "cores/board",
    "cores/co",
    "cores/file",
    "cores/keystore",
    "cores/membership",
    "cores/names",
    "cores/rich-text",
    "cores/room",
    "cores/storage",
    "examples/counter",
    "examples/counter-upgraded",
    "examples/message",
    "tauri-plugin-co-sdk"
]
resolver = "2"

[profile.release]
panic = "unwind"

[workspace.dependencies]
anyhow = { version = "1", features = ["backtrace"] }
async-stream = "0.3.3"
async-trait = "0.1.57"
cid = "0.11.1"
co-guard = { version = "0.1.0" }
derive_more = "0.99.17"
either = { version = "1" }
futures = "0.3.30"
futures-util = "0.3.26"
hyper = { version = "0.14.23" }
insta = { version = "1.34.0", features = ["default", "yaml"] }
ipld-core = { version = "0.4.1", features = ["serde"] }
ipld-dagpb = "0.2.1"
js-sys = "0.3"
multiaddr = "0.18.2"
multibase = "0.9.1"
multihash = "0.19.3"
multihash-codetable = { version = "0.1.4", features = ["blake3"] }
num-rational = "0.4"
pin-project = "1.1.4"
rand = "0.8.5"
rust-unixfs = "0.5.0"
schemars = "0.8.21"
scopeguard = "1.2.0"
serde = "1"
serde_bytes = "0.11.12"
serde_ipld_dagcbor = "0.6.1"
serde_ipld_dagjson = "0.2.0"
serde_json = "1"
serde_repr = "0.1"
smallvec = "^1.6.1"
static_assertions = "1.1.0"
thiserror = "1"
tokio = "1"
tokio-context = "0.1.3"
tokio-stream = { version = "0.1.15", default-features = false }
tokio-test = "0.4.2"
tokio-util = "0.7"
tokio_with_wasm = "0.9"
toml = "0.8"
tracing = "0.1.34"
tracing-bunyan-formatter = { package = "co-tracing-bunyan-formatter", version = "0.3.11" }
tracing-log = "0.1.3"
tracing-opentelemetry = "0.18"
tracing-subscriber = "0.3.14"
uuid = { version = "1.2.2", features = ["default", "v4"] }
wasm-bindgen = "0.2.105"
wasm-bindgen-futures = "0.4.55"
web-sys = "0.3.82"
web-time = "1.1"
zeroize = "1.7.0"
zstd = "0.13.3"

# local workspace crates
co-actor = { path = "co-actor", version = "0.1.0", default-features = false }
co-api = { path = "co-api", version = "0.1.0" }
co-cli = { path = "co-cli", version = "0.1.0" }
co-core-board = { path = "cores/board", version = "0.1.0" }
co-core-co = { path = "cores/co", version = "0.1.0" }
co-core-file = { path = "cores/file", version = "0.1.0" }
co-core-keystore = { path = "cores/keystore", version = "0.1.0" }
co-core-membership = { path = "cores/membership", version = "0.1.0" }
co-core-names = { path = "cores/names", version = "0.1.0" }
co-core-rich-text = { path = "cores/rich-text", version = "0.1.0" }
co-core-room = { path = "cores/room", version = "0.1.0" }
co-core-storage = { path = "cores/storage", version = "0.1.0" }
co-dioxus = { path = "co-dioxus", version = "0.1.0" }
co-identity = { path = "co-identity", version = "0.1.0" }
co-log = { path = "co-log", version = "0.1.0" }
co-macros = { path = "co-macros", version = "0.1.0" }
co-messaging = { path = "co-messaging", version = "0.1.0" }
co-network = { path = "co-network", version = "0.1.0", default-features = false }
co-primitives = { path = "co-primitives", version = "0.1.0" }
co-runtime = { path = "co-runtime", version = "0.1.0" }
co-sdk = { path = "co-sdk", version = "0.1.0", default-features = false }
co-storage = { path = "co-storage", version = "0.1.0", default-features = false }
co-test = { path = "co-test" }
tauri-plugin-co-sdk = { path = "tauri-plugin-co-sdk", version = "0.1.0" }
