[package]
name = "co-actor"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"

[dependencies]
anyhow = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
co-primitives = { workspace = true }
derive_more = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true, features = ["sync"] }
tokio-util = { workspace = true, features = ["rt"] }
tracing = { workspace = true }

[target.'cfg(tokio_unstable)'.dependencies]
tokio = { workspace = true, features = ["full", "tracing"] }

[dev-dependencies]
insta = { version = "1.34.0", features = ["default", "yaml"] }
