[package]
name = "co-actor"
version = "0.1.0"
edition = "2021"
rust-version = "1.91"

[dependencies]
anyhow = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
co-primitives = { workspace = true }
derive_more = { workspace = true }
futures = { workspace = true }
static_assertions = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tokio-stream = { workspace = true, default-features = false, features = ["sync"] }
tokio-util = { workspace = true }
tokio_with_wasm = { workspace = true, optional = true, features = ["sync"] }
tracing = { workspace = true }
wasm-bindgen-futures = { workspace = true, optional = true }
web-time = { workspace = true, optional = true }

[target.'cfg(tokio_unstable)'.dependencies]
tokio = { workspace = true, features = ["full", "tracing"] }

[dev-dependencies]
insta = { version = "1.34.0", features = ["default", "yaml"] }

[features]
default = ["native"]
js = ["dep:web-time", "dep:wasm-bindgen-futures", "dep:tokio_with_wasm"]
native = ["tokio-util/rt"]
