[package]
name = "co-api"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
co-primitives = { path = "../co-primitives" }
either = { workspace = true }
futures = { workspace = true }
libipld = { workspace = true, features = ["default", "serde-codec"] }
serde = { workspace = true, features = ["derive"] }
serde_ipld_dagcbor = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
co-storage = { path = "../co-storage" }

[features]
default = []
wasm32 = []
