[package]
name = "co-api"
version = "0.1.0"
edition = "2021"
rust-version = "1.91"
license = "AGPL-3.0-only"
homepage = "https://www.cokit.org"
repository = "https://github.com/1iolabs/cokit.git"
documentation = "https://www.cokit.org/docs/"
description = "COKIT API to implement a Core."

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
cid = { workspace = true }
co-primitives = { workspace = true }
co-macros = { workspace = true }
either = { workspace = true }
futures = { workspace = true }
ipld-core = { workspace = true }
multihash-codetable = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
wasm32 = []
