[package]
name = "co-bindings"
version = "0.1.0"
edition = "2021"
rust-version = "1.91"
license = "AGPL-3.0-only"
homepage = "https://www.cokit.org"
repository = "https://github.com/1iolabs/cokit.git"
documentation = "https://www.cokit.org/docs/"
description = "COKIT language bindings and FFI"

[lib]
name = "co_bindings"
crate-type = ["lib", "cdylib"]

[dependencies]
anyhow = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
cid = { workspace = true }
co-actor = { workspace = true }
co-primitives = { workspace = true }
co-sdk = { workspace = true, default-features = false, features = ["recommended", "apple-sandbox"] }
derive_more = { workspace = true }
flutter_rust_bridge = { version = "=2.11.1", optional = true }
futures = { workspace = true }
ipld-core = { workspace = true }
multiaddr = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_repr = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
uniffi = { version = "0.30", optional = true }

[features]
default = ["frb", "network"]
uniffi = ["dep:uniffi"]
frb = ["dep:flutter_rust_bridge"]
network = ["co-sdk/network"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
