[package]
name = "co-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-stream = { workspace = true }
chrono = "0.4.37"
clap = { version = "^4.3.23", features = ["derive"] }
co-api = { path = "../co-api" }
co-core-co = { path = "../cores/co" }
co-core-file = { path = "../cores/file" }
co-core-keystore = { path = "../cores/keystore" }
co-core-membership = { path = "../cores/membership" }
co-core-pin = { path = "../cores/pin" }
co-core-room = { path = "../cores/room" }
co-log = { path = "../co-log" }
co-messaging = { path = "../co-messaging" }
co-primitives = { path = "../co-primitives" }
co-sdk = { path = "../co-sdk", features = ["tokio-runtime"] }
co-storage = { path = "../co-storage" }
exitcode = "1.1.2"
futures = { workspace = true }
hexdump = "0.1.1"
libipld = { workspace = true, features = ["default", "serde-codec"] }
serde = { workspace = true, features = ["derive"] }
serde_ipld_dagcbor = { workspace = true }
serde_json = { workspace = true }
termion = "3.0.0"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true, features = ["full"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-bunyan-formatter = "0.3.6"
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true }
