[package]
name = "co-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.91"

[[bin]]
name = "co"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
chrono = "0.4.37"
cid = { workspace = true }
clap = { version = "^4.3.23", features = ["derive", "env"] }
co-core-co = { workspace = true }
co-core-file = { workspace = true }
co-core-keystore = { workspace = true }
co-core-membership = { workspace = true }
co-core-pin = { workspace = true }
co-core-room = { workspace = true }
co-core-storage = { workspace = true }
co-log = { workspace = true }
co-messaging = { workspace = true }
co-primitives = { workspace = true }
co-runtime = { workspace = true }
co-sdk = { workspace = true, features = ["native"] }
co-storage = { workspace = true }
colored = "2.1.0"
exitcode = "1.1.2"
futures = { workspace = true }
hexdump = "0.1.1"
ipld-core = { workspace = true }
multiaddr = { workspace = true }
opentelemetry = "0.22"
opentelemetry-otlp = { version = "0.15.0", features = ["tonic"] }
opentelemetry-semantic-conventions = "0.14.0"
opentelemetry-stdout = { version = "0.3.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio"] }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_ipld_dagcbor = { workspace = true }
serde_json = { workspace = true }
termion = "3.0.0"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["rt"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-bunyan-formatter = { workspace = true }
tracing-log = { workspace = true }
tracing-opentelemetry = "0.23"
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true }
zstd = { workspace = true, optional = true }

[features]
default = ["llvm", "wasmi", "pinning", "network"]

# sdk
pinning = ["co-sdk/pinning"]
bundle-wasm-cores = ["co-sdk/bundle-wasm-cores", "dep:zstd"]
network = ["co-sdk/network"]

# runtime
llvm = ["co-runtime/llvm"]
wamr = ["co-runtime/wamr"]
wasmi = ["co-runtime/wasmi"]
cranelift = ["co-runtime/cranelift"]
