[package]
name = "co-dioxus"
version = "0.1.0"
authors = ["DK <34+dk@users.noreply.1io.com>"]
edition = "2021"
rust-version = "1.91"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
cid = { workspace = true }
clap = { version = "^4.3.23", features = ["derive", "env"] }
co-core-co = { workspace = true }
co-core-membership = { workspace = true }
co-primitives = { workspace = true }
co-sdk = { workspace = true }
dioxus = { version = "^0.7.3", default-features = false, features = [
    "hooks",
    "signals",
] }
futures = { workspace = true }
ipld-core = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio_with_wasm = { workspace = true, optional = true, features = ["sync"] }
tracing = { workspace = true }
uuid = { workspace = true }
wasm-bindgen-futures = { workspace = true, optional = true }
web-sys = { version = "0.3", optional = true }

[features]
default = []

# targets
"desktop" = ["fs", "network", "tracing", "co-sdk/default", "co-sdk/apple-sandbox"]
"mobile" = ["fs", "network", "tracing", "co-sdk/recommended", "co-sdk/apple-sandbox"]
"web" = ["js", "co-sdk/web"]

# features
"fs" = ["co-sdk/fs"]
"network" = ["co-sdk/network"]
"js" = ["co-sdk/js", "uuid/js", "dep:wasm-bindgen-futures", "dep:web-sys", "dep:tokio_with_wasm"]
"tracing" = ["co-sdk/tracing"]
