[package]
name = "co-identity"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
co-primitives = { path = "../co-primitives" }
did-key = "0.2.1"
futures = { workspace = true }
libipld = { workspace = true, features = ["default", "serde-codec"] }
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1.2.2", features = ["default", "v4"] }

# workarounds
## error: the `alloc` feature must currently be enabled
##  --> /usr/local/rust/cargo/registry/src/index.crates.io-6f17d22bba15001f/form_urlencoded-1.2.1/src/lib.rs:24:1
form_urlencoded = "=1.2.0"

[features]
"default" = []

[dev-dependencies]
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
