[package]
name = "co-identity"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"

[lib]
crate-type = ["lib"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
cid = { workspace = true }
co-core-keystore = { workspace = true }
co-primitives = { workspace = true }
did-key = { version = "0.2.1", git = "https://github.com/dkuhnert/did-key.rs.git" }
didcomm-rs = { version = "0.7.2", git = "https://github.com/dkuhnert/didcomm-rs.git" }
futures = { workspace = true }
hex = { version = "0.4" }
ipld-core = { workspace = true }
multibase = "0.9.1"
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

# workarounds
## error: the `alloc` feature must currently be enabled
##  --> /usr/local/rust/cargo/registry/src/index.crates.io-6f17d22bba15001f/form_urlencoded-1.2.1/src/lib.rs:24:1
form_urlencoded = "1.2.1"

[features]
"default" = []

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
tracing-subscriber = { workspace = true }
