[package]
name = "co-js"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
anyhow = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
cid = { workspace = true }
co-actor = { workspace = true }
co-primitives = { workspace = true }
futures = { workspace = true }
ipld-core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_repr = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
wasm-bindgen = { version = "0.2.105" }
wasm-bindgen-futures = { version = "0.4.55", features = ["futures-core-03-stream"] }
wasm-streams = "0.4.2"
web-sys = { version = "0.3.82", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.55"
