[package]
name = "co-js"
version = "0.1.0"
edition = "2021"
rust-version = "1.91"
license = "AGPL-3.0-only"
homepage = "https://www.cokit.org"
repository = "https://github.com/1iolabs/cokit.git"
documentation = "https://www.cokit.org/docs/"
description = "COKIT primitives for the browser using WebAssembly."

[package.metadata.wasm-pack]
package-name = "@1io/co-js"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
anyhow = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
cid = { workspace = true }
co-actor = { workspace = true }
co-primitives = { workspace = true }
derive_more = { workspace = true }
futures = { workspace = true }
ipld-core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_repr = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true, features = ["futures-core-03-stream"] }
wasm-streams = "0.4.2"
web-sys = { workspace = true, features = ["console"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
co-actor = { workspace = true, features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.55"
