[package]
name = "co-log"
version = "0.1.0"
edition = "2021"
rust-version = "1.91"

[lib]
crate-type = ["lib"]

[dependencies]
anyhow = { workspace = true }
async-stream = "0.3.5"
async-trait = { workspace = true }
cid = { workspace = true }
co-identity = { workspace = true }
co-primitives = { workspace = true }
co-storage = { workspace = true }
futures = { workspace = true }
ipld-core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[features]
"default" = []

[dev-dependencies]
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
