[package]
name = "co-log"
version = "0.1.0"
edition = "2021"
rust-version = "1.91"
license = "AGPL-3.0-only"
homepage = "https://www.cokit.org"
repository = "https://github.com/1iolabs/cokit.git"
documentation = "https://www.cokit.org/docs/"
description = "COKIT Merkle-CRDT log implementation."

[lib]
crate-type = ["lib"]

[dependencies]
anyhow = { workspace = true }
async-stream = "0.3.5"
async-trait = { workspace = true }
cid = { workspace = true }
co-identity = { workspace = true }
co-primitives = { workspace = true }
co-storage = { workspace = true }
futures = { workspace = true }
ipld-core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[features]
"web" = ["co-identity/web", "co-storage/web"]

[dev-dependencies]
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
