[package]
name = "co-macros"
version = "0.1.0"
edition = "2021"
rust-version = "1.91"
license = "AGPL-3.0-only"
homepage = "https://www.cokit.org"
repository = "https://github.com/1iolabs/cokit.git"
documentation = "https://www.cokit.org/docs/"
description = "COKIT macros."

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.104", features = ["full"] }
quote = "1.0.33"
proc-macro2 = "1.0"
