[package]
name = "co-messaging"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"

[dependencies]
cid = { workspace = true }
co-macros = { path = "../co-macros" }
co-primitives = { path = "../co-primitives" }
ipld-core = { workspace = true }
schemars = { workspace = true }
serde = { features = ["derive"], workspace = true }
serde_ipld_dagcbor = { workspace = true }
serde_ipld_dagjson = { workspace = true }
serde_json = { workspace = true }
