[package]
name = "co-messaging"
version = "0.1.0"
edition = "2021"
rust-version = "1.91"
license = "AGPL-3.0-only"
homepage = "https://www.cokit.org"
repository = "https://github.com/1iolabs/cokit.git"
documentation = "https://www.cokit.org/docs/"
description = "COKIT Messaging primitives."

[dependencies]
cid = { workspace = true }
co-macros = { workspace = true }
co-primitives = { workspace = true }
ipld-core = { workspace = true }
schemars = { workspace = true }
serde = { features = ["derive"], workspace = true }
serde_ipld_dagcbor = { workspace = true }
serde_ipld_dagjson = { workspace = true }
serde_json = { workspace = true }
