[package]
name = "co-network"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"

[dependencies]
anyhow = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
asynchronous-codec = "0.7.0"
cid = { workspace = true }
co-actor = { workspace = true }
co-identity = { workspace = true }
co-primitives = { workspace = true }
co-storage = { workspace = true }
derive_more = { workspace = true }
did_url = "0.1.0"
did-key = "0.2.1"
futures = { workspace = true }
ipld-core = { workspace = true }
libipld = "0.16"
libp2p = { workspace = true }
libp2p-bitswap = { version = "0.25.0", git = "https://github.com/dkuhnert/libp2p-bitswap.git", branch = "auth", features = [
    "compat",
] }
pin-project = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
insta = { version = "1.34.0", features = ["default", "yaml"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
#tracing-test = "0.1"
#test-log = "0.2"
