[package]
name = "co-primitives"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"

[dependencies]
anyhow = { workspace = true }
cid = { workspace = true }
co-macros = { path = "../co-macros" }
derive_more = { workspace = true }
either = { workspace = true }
ipld-core = { workspace = true }
ipld-dagpb = { workspace = true }
multihash = { workspace = true }
multihash-codetable = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }
serde_ipld_dagcbor = { workspace = true }
serde_ipld_dagjson = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
insta = { version = "1.34.0", features = ["default", "yaml"] }
